<resources>
    <string name="app_name" translatable="false">mobileWZR</string>
    <string name="time_string" translatable="false">%1$s.%2$s</string>
    <string name="monday_short">Mon.</string>
    <string name="tuesday_short">Tue.</string>
    <string name="wednesday_short">Wed.</string>
    <string name="thursday_short">Thu.</string>
    <string name="friday_short">Fri.</string>
    <string name="saturday_short">Sat.</string>
    <string name="sunday_short">Sun.</string>
    <string name="weekA">Week A</string>
    <string name="weekB">Week B</string>
    <string name="week">Week</string>
    <string name="my_timetable">My timetable</string>
    <string name="search">Search</string>
    <string name="news">News</string>
    <string name="group">Group</string>
    <string name="show">Show</string>
    <string name="no_group_selected">No group selected</string>
    <string name="set_as_my_timetable">Set as my timetable</string>
    <string name="was_saved">was saved</string>
    <string name="internet_connection_error">Check your connection and try again</string>
    <string name="try_again">Try again</string>
    <string name="no_classes">No classes</string>
    <string name="others">Others</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_new_subject">Add new subject</string>
    <string name="delete">Delete</string>
    <string name="day">Day</string>
    <string name="location">Location</string>
    <string name="fields_cannot_be_empty">Fields cannot be empty</string>
    <string name="time_is_incorect">Incorrect start/end time</string>
    <string name="copy_mode">Copy mode</string>
    <string name="classes_has_been_copied">Classes has been copied</string>
    <string name="edit_all_with_the_same_title">Edit all classes with the same title</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="timetable_title_base">Group %1$s</string>
    <string name="timetable_title_with_week">Group %1$s (Week %2$s)</string>
    <string name="timetable_title_week_a">Group %1$s (Week A)</string>
    <string name="timetable_title_week_b">Group %1$s (Week B)</string>
    <string name="timetable_title_calendar">Group %1$s\n(%2$s, %3$s)</string>
    <string name="no_news_available">No news available</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="calendar">Calendar</string>
    <string name="choose_day">Choose day</string>
    <string name="choose_view">Choose view</string>
    <string name="lecturers">Lecturers</string>
    <string name="refresh">Refresh</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="refresh_lecturers_timetable_confirmation">Do you really want to refresh lecturer\'s timetable? It may take several seconds.</string>
    <string name="processing_in_progress">Processing in progress…</string>
    <string name="lecturers_timetable_info">Lecturer\'s timetable requires lots of data to be processed. It may take several seconds.</string>
    <string name="get_timetable">Get timetable</string>
    <string name="notifications">Notifications</string>
    <string name="login_for_lecturers">Login for lecturers</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="messages">Messages</string>
    <string name="choose_group">Choose group</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cannot_send_a_message_right_now">Cannot send a message right now</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="error_while_sending_message">Error while sending message</string>
    <string name="last_message">Last message:</string>
    <string name="message_cannot_be_empty">Message cannot be empty</string>
    <string name="lecturers_timetable_is_currently_not_available">Lecturer\'s timetable is currently not available</string>
    <string name="register">Register</string>
    <string name="token">Token</string>
    <string name="register_successfully">Registered successfully! Now you can login.</string>
</resources>
