<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/titleEditText"
                style="@style/EditViewEditText"
                android:drawableStart="@drawable/ic_title"
                android:hint="@string/title"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/descriptionEditText"
                style="@style/EditViewEditText"
                android:drawableStart="@drawable/ic_subtitle"
                android:hint="@string/description"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/locationEditText"
                style="@style/EditViewEditText"
                android:layout_marginBottom="15dp"
                android:drawableStart="@drawable/ic_location"
                android:hint="@string/location"
                android:importantForAutofill="no" />

            <LinearLayout
                android:id="@+id/timeChooser"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/from"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/editViewStartTime"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    tools:text="08:00" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/to"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/editViewEndTime"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    tools:text="16:00" />

            </LinearLayout>

            <com.addisonelliott.segmentedbutton.SegmentedButtonGroup
                android:id="@+id/dayWeekSegmentedGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp"
                android:paddingBottom="20dp"
                app:borderWidth="0.5dp"
                app:radius="16dp"
                app:ripple="false"
                app:selectedBackground="@color/colorPrimary"
                app:selectedButtonRadius="16dp"
                app:selectionAnimationDuration="@android:integer/config_shortAnimTime">

                <com.addisonelliott.segmentedbutton.SegmentedButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"
                    app:selectedTextColor="@android:color/white"
                    app:text="@string/monday_short" />

                <com.addisonelliott.segmentedbutton.SegmentedButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"
                    app:selectedTextColor="@android:color/white"
                    app:text="@string/tuesday_short" />

                <com.addisonelliott.segmentedbutton.SegmentedButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"
                    app:selectedTextColor="@android:color/white"
                    app:text="@string/wednesday_short" />

                <com.addisonelliott.segmentedbutton.SegmentedButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"
                    app:selectedTextColor="@android:color/white"
                    app:text="@string/thursday_short" />

                <com.addisonelliott.segmentedbutton.SegmentedButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"
                    app:selectedTextColor="@android:color/white"
                    app:text="@string/friday_short" />

            </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>

            <com.addisonelliott.segmentedbutton.SegmentedButtonGroup
                android:id="@+id/weekSegmentedGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp"
                android:paddingBottom="20dp"
                app:borderWidth="0.5dp"
                app:radius="16dp"
                app:ripple="false"
                app:selectedBackground="@color/colorPrimary"
                app:selectedButtonRadius="16dp"
                app:selectionAnimationDuration="@android:integer/config_shortAnimTime">

                <com.addisonelliott.segmentedbutton.SegmentedButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"
                    app:selectedTextColor="@android:color/white"
                    app:text="@string/weekA" />

                <com.addisonelliott.segmentedbutton.SegmentedButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"
                    app:selectedTextColor="@android:color/white"
                    app:text="@string/weekB" />

            </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>

            <Switch
                android:id="@+id/copyModeSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/copy_mode" />

            <Switch
                android:id="@+id/updateMultipleSubjectsSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/edit_all_with_the_same_title" />

        </LinearLayout>

    </ScrollView>

</layout>

