<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="pl.expert.mobilewzr.ui.lecturers.LecturersViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/lecturersSearchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/card_view_start_end_margin"
            android:hint="@string/search"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:visibility="gone"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibleIfSuccessState="@{viewModel.lecturersState}"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lecturersRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lecturersSearchView"
            app:visibleIfSuccessState="@{viewModel.lecturersState}"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/lecturersProgressBar"
            android:layout_width="@dimen/progress_indicator_size"
            android:layout_height="@dimen/progress_indicator_size"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibleIfLoadingState="@{viewModel.lecturersState}"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/lecturersTextView"
            style="@style/NewsViewErrorTextView"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/internet_connection_error"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            app:visibleIfErrorState="@{viewModel.lecturersState}" />

        <Button
            android:id="@+id/lecturersButton"
            style="@style/RobotoButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="25dp"
            android:onClick="@{() -> viewModel.getLecturers()}"
            android:text="@string/try_again"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lecturersTextView"
            app:visibleIfErrorState="@{viewModel.lecturersState}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>